Fix text wrap, fix icon shrinking + alignment

--- a/src/main/resources/com/cloudbees/plugins/credentials/common/card.css
+++ b/src/main/resources/com/cloudbees/plugins/credentials/common/card.css
@@ -82,11 +82,13 @@
 
 .credentials-card__title {
     display: flex;
-    align-items: center;
     gap: 0.75rem;
+    word-break: break-all;
 
     & > svg, img {
         width: 1.25rem !important;
         height: 1.25rem !important;
+        flex-shrink: 0;
+        margin-top: 0.0625rem;
     }
 }
